<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_drawable">

    <Button
        android:id="@+id/btn5"
        android:layout_width="205dp"
        android:layout_height="80dp"
        android:text="@string/Themes"
        android:layout_marginVertical="60dp"
        android:onClick="onClick"
        android:layout_gravity="start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="205dp"
        android:layout_height="80dp"
        android:layout_marginVertical="60dp"
        android:text="@string/Profile"
        android:onClick="onClick"
        android:layout_gravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="205dp"
        android:layout_height="80dp"
        android:layout_gravity="start"
        android:layout_marginVertical="140dp"
        android:onClick="onClick"
        android:text="@string/Registration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="205dp"
        android:layout_height="80dp"
        android:layout_gravity="end"
        android:layout_marginVertical="140dp"
        android:onClick="onClick"
        android:text="@string/Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.0" />

</FrameLayout>